# AWE

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wallpaper/axb/connections/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: BloomShader_ps.glsl  BlurHorizontal_ps.glsl  BlurVertical_ps.glsl  ChargeShader_vs.glsl  ConnectionShader.vs  DischargeShader_ps.glsl  DischargeShader_vs.glsl  FullscreenShader_vs.glsl  ItemShader.vs  NodeOverlayShader_ps.glsl  NodeOverlayShader_vs.glsl  NodeShader_ps.glsl  NodeShader_vs.glsl  ParticleShader_vs.glsl  PointShader.vs  Simple.ps  SimpleShader_ps.glsl  TexturedShader_ps.glsl  ThresholdShader_ps.glsl
app/src/main/cpp/: Point.h  conections_engine.h  connection_shader.cpp  connection_shader.h  connections_engine.cpp  connections_engine.h  connections_updater.cpp  connections_updater.h  engine.cpp  engine.h  item_shader.cpp  item_shader.h  matrix.h  mesh.h  native-engine-lib.cpp  pch.h  point.h  point_shader.cpp  point_shader.h  updater.cpp  updater.h  vector3.cpp  vertex.h
app/src/main/cpp/connections/: connection_shader.cpp  connection_shader.h  engine.cpp  engine.h  point.h  point_shader.cpp  point_shader.h  updater.cpp  updater.h  vertex.h
app/src/main/cpp/electric/: Vertex.h  bloom_shader.cpp  bloom_shader.h  charge_shader.cpp  charge_shader.h  cluster.cpp  cluster.h  discharge_shader.cpp  discharge_shader.h  dof_shader.cpp  dof_shader.h  engine.cpp  engine.h  node.cpp  node.h  node_overlay_shader.h  node_shader.cpp  node_shader.h  particle_shader.cpp  particle_shader.h  updater.cpp  updater.h  vertex.h
app/src/main/cpp/engine/: binary_reader.h  camera.h  color.h  engine.cpp  engine.h  framebuffer.cpp  framebuffer.h  matrix.cpp  matrix.h  mesh.h  path.h  quaternion.h  sensor.h  shader.h  texture.h  updater.cpp  updater.h  util.h  vector3.h
app/src/main/java/com/wallpaper/axb/: Preset.java
app/src/main/res/drawable/: generic_margin_divider.xml
app/src/main/res/layout/: activity_main.xml  add_cluster_layout.xml  edit_cluster_view.xml  settings_fragment.xml  slide_in_view.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml
app/src/main/res/xml/: wallpaper.xml
(+23 files in other folders)
